# w9-tools

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  check-logs.sh  docker-compose.yml  guide.md
.github/workflows/: docker-build.yml
client/: Cargo.toml  Trunk.toml  index.html
client/site/pkg/: index.html
client/src/: components.rs  lib.css  lib.rs
client/src/pages/: convert.rs  files.rs  home.rs  login.rs  mod.rs  notes.rs  qr.rs  short.rs
deploy/: guide.md  install.sh
favicon_io/: about.txt
frontend/: Dockerfile  index.html
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.css  App.tsx  vite-env.d.ts
server/: Cargo.toml
server/infra/templates/: voxel.css
server/src/: handlers.rs  main.rs  templates.rs
