[package]
name = "w9-tools-server"
version = "0.1.0"
edition = "2021"
[dependencies]
w9-tools-client = { path = "../client" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
nanoid = { workspace = true }
reqwest = { workspace = true }
leptos = { workspace = true }
leptos_axum = "0.6"
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
