[package]
name = "w9-tools-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio-postgres = { workspace = true }
reqwest = { workspace = true }
nanoid = { workspace = true }
sha2 = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
qrcode = "0.14"
base64 = "0.22"
pulldown-cmark = "0.12"
html-escape = "0.2"
mime_guess = "2.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
